<resources>
    <string name="app_name">Apodeixis</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="broker">Broker</string>
    <string name="client_id">Client ID</string>
    <string name="port">Port</string>
    <string name="broker_hint">broker.mqttdashboard.com</string>
    <string name="client_id_hint">Anything is ok</string>
    <string name="port_hint">1883</string>
    <string name="connect">Connect</string>
    <string name="deviceName">Device name</string>


    <!--<string name="pref_title_display_broker">Broker</string>-->
    <string name="pref_default_broker">147.87.117.73</string>

    <!--<string name="pref_title_display_port">Port</string>-->
    <string name="pref_default_port">1883</string>

    <!--<string name="pref_title_display_deviceName">Device name</string>-->
    <string name="pref_default_deviceName">androidName</string>
</resources>
